# http_perf_comparision

golang/: go.mod  main.go
rust/: Cargo.toml
rust/src/: main.rs
